--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-select": "^5.10.0"
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.8"
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "typescript": "^5.7.3"
   }
 }
