--- a/photo-management-app/package.json
+++ b/photo-management-app/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.51",
     "@tailwindcss/vite": "^4.0.3",
     "flowbite-react": "^0.10.2",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
