--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.4",
-    "react-beautiful-dnd": "^13.1.1",
+    "force-resolutions": "^1.0.11",
+    "react-beautiful-dnd": "^13.1.0",
     "react-select": "^5.10.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.8",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^19.0.3",
     "typescript": "^5.7.3"
   }
+
 }
