--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.4",
-    "lucide-react": "^0.475.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "lucide-react": "^0.475.0"
   }
 }
