--- a/photo-management-app/package.json
+++ b/photo-management-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
     "@mui/joy": "^5.0.0-beta.51",
+    "@mui/material": "^6.4.4",
     "@tailwindcss/vite": "^4.0.3",
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.475.0",
@@ -20,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "react-select": "^5.10.0"
+    "react-select": "^5.10.0",
+    "sweetalert2": "^11.16.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
