--- a/photo-management-app/package.json
+++ b/photo-management-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
     "@mui/joy": "^5.0.0-beta.51",
+    "@mui/material": "^6.4.4",
     "@tailwindcss/vite": "^4.0.3",
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.475.0",
