--- a/package.json
+++ b/package.json
@@ -5,6 +5,19 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.4",
-    "lucide-react": "^0.475.0"
+    "lucide-react": "^0.475.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
+    "sweetalert2": "^11.17.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.6",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6",
+    "vite": "^6.1.0"
   }
 }
